# ai-defender

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRODUCT.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  installer.yml
agent-core/: Cargo.toml
agent-core/src/: agent.rs  config.rs  console.rs  incident_store.rs  lib.rs  logging.rs  main.rs  paths.rs  runtime.rs  service.rs  types.rs
agent-core/src/event_collector/: mod.rs
agent-core/src/kill_switch/: firewall.rs  mod.rs
agent-core/src/license/: mod.rs
agent-core/src/response_engine/: mod.rs
agent-core/src/rules_engine/: engine.rs  mod.rs  protected_paths.rs  rules.rs
agent-core/src/threat_feed/: fetch.rs  mod.rs  schema.rs  verify.rs
assets/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING_GUIDE.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  GOOD_FIRST_ISSUES.md  HOME.md  INSTALLATION.md  INSTALLER.md  LEARNING_VS_STRICT.md  LICENSING.md  PAID_PROTECTION.md  PRIVACY.md  PRO_MODE.md  README.md  RECOVERY.md  ROADMAP.md  RULES.md  SCANNING.md  SYSMON.md  THREAT_FEED.md  THREAT_FEED_AUTO_REFRESH.md  THREAT_MODEL.md  UNINSTALL.md  UPDATES.md
installer/: README.md  build.cmd  build.ps1
installer/wix/: AI.Defender.wxs  config.default.toml
rules-engine/: README.md
scanner/: Cargo.toml  README.md
scanner/src/: lib.rs  main.rs  signature.rs
ui/: README.md
ui/AI.Defender.Tray/: AI.Defender.Tray.csproj  AgentCli.cs  AgentFiles.cs  IconFactory.cs  IncidentDialog.cs  ProductInfo.cs  Program.cs  ScanProgressDialog.cs  ScannerCli.cs  StatusDialog.cs  TomlMini.cs  TrayAppContext.cs  app.manifest
