[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
serde.workspace = true
serde_json = "1"
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
windows.workspace = true
quick-xml.workspace = true
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std"] }

windows-service = "0.7"
