[package]
name = "scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sha2.workspace = true
walkdir.workspace = true
windows.workspace = true

agent-core = { path = "../agent-core" }

